results/SpecGenBench/2-shot/log-DigitCount-2023_11_05_23_44_44.txt
import java.util.Map;
import java.util.HashMap;

class DigitCount {
    //@ requires num != null;
    //@ ensures \result <==> (\forall int i; 0 <= i && i < num.length(); h.getOrDefault(i, 0) == num.charAt(i) - '0');
    public boolean digitCount(String num) {
        Map<Integer, Integer> h = new HashMap<Integer, Integer>();
        int n = num.length();
        for (int i = 0; i < n; i++) {
            int digit = num.charAt(i) - '0';
            h.put(digit, h.getOrDefault(digit, 0) + 1);
        }
        for (int i = 0; i < n; i++) {
            int v = num.charAt(i) - '0';
            if (h.getOrDefault(i, 0) != v) {
                return false;
            }
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/DigitCount.java:6: error: cannot find symbol
    //@ ensures \result <==> (\forall int i; 0 <= i && i < num.length(); h.getOrDefault(i, 0) == num.charAt(i) - '0');
                                                                         ^
  symbol:   variable h
  location: class DigitCount
1 error

